<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="@dimen/default_large_row_size"
            android:padding="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout2">

        <TextView
                android:id="@+id/tvTitle2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/title"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/white"/>
    </LinearLayout>
    <EditText

            android:id="@+id/dialog_et_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:ems="10"
            android:hint="@string/hint_username"
            android:padding="14dp"
            android:background="@drawable/edit_text_login_border"
            android:inputType="number"
            android:textSize="16sp"
            android:textColorHint="@color/green"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText

            android:id="@+id/dialog_et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:ems="10"
            android:hint="@string/hint_password"
            android:padding="14dp"
            android:background="@drawable/edit_text_login_border"
            android:inputType="number"
            android:textSize="16sp"
            android:textColorHint="@color/green"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_et_username"
            app:layout_constraintStart_toStartOf="@+id/dialog_et_username"
            app:layout_constraintEnd_toEndOf="@+id/dialog_et_username"/>


    <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:paddingBottom="15dp"
                  android:layout_marginTop="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/dialog_et_password"
                  app:layout_constraintEnd_toEndOf="@+id/dialog_et_password"
                  app:layout_constraintStart_toStartOf="@+id/dialog_et_password">
        <Button
                android:id="@+id/dialog_submit"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="SUBMIT"
                android:background="@drawable/button_shape"

                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
        />
        <Button
                android:id="@+id/dialog_cancel"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="CANCEL"
                android:background="@drawable/button_shape2"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="24dp" tools:layout_editor_absoluteY="209dp"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
        />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>