<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <december.timeruler.com.timeruler_december.Camera.AutoFitTextureView
            android:id="@+id/texture"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/control"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:text="Dec 11,2018\n11:12:45 am"
            android:id="@+id/digitalClock"
            android:background="@color/black_alpha_80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <SurfaceView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/cameraPreview123"

            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/control"/>    <ImageView
            android:id="@+id/iv_photoTaken"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="asdasdasd"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/control"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
    />
    <FrameLayout
            android:id="@+id/control"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/control_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                    <Button
                            android:id="@+id/btn_in"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/in"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                    <Button
                            android:id="@+id/btn_out"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/out"
                            app:layout_constraintTop_toTopOf="@+id/btn_in"
                            app:layout_constraintStart_toEndOf="@+id/btn_in"
                            app:layout_constraintBottom_toBottomOf="@+id/btn_in"
                            app:layout_constraintEnd_toEndOf="parent"/>


                <ImageButton
                        android:visibility="gone"
                        android:id="@+id/info"
                        android:contentDescription="@string/description_info"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:padding="@dimen/image_button_padding"
                        android:src="@drawable/common_google_signin_btn_icon_dark_normal_background"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
