<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SurfaceCamera">






    <SurfaceView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/cameraPreview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/control"/>

    <TextView

            android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="Offline mode"
              android:textAlignment="center"
                android:visibility="gone"
              android:background="@color/black"
              android:textColor="@color/white"
              android:id="@+id/timeruler_mode"  app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:text="Dec 11,2018\n11:12:45 am"
            android:id="@+id/digitalClock2"
            android:background="@color/black_alpha_80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeruler_mode" android:layout_marginTop="8dp"/>
    <FrameLayout
            android:id="@+id/control"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView

                    android:src="@mipmap/ic_retake_pic"
                    android:id="@+id/iv_retake_pic"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
                    android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.45"/>
            <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/constraintLayout3">
                <Button
                        android:alpha=".5"

                        android:clickable="false"
                        android:id="@+id/btn_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/in"
                        android:textColor="@color/white"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
                <Button
                        android:textColor="@color/white"
                        android:alpha=".5"
                        android:clickable="false"
                        android:id="@+id/btn_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/out"
                        app:layout_constraintTop_toTopOf="@+id/btn_in"
                        app:layout_constraintStart_toEndOf="@+id/btn_in"
                        app:layout_constraintBottom_toBottomOf="@+id/btn_in"
                        app:layout_constraintEnd_toEndOf="parent"/>


                <ImageButton
                        android:visibility="gone"
                        android:id="@+id/info"
                        android:contentDescription="@string/description_info"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:padding="@dimen/image_button_padding"
                        android:src="@drawable/common_google_signin_btn_icon_dark_normal_background"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
        ></FrameLayout>
    <ImageView
            android:visibility="gone"
            android:src="@drawable/ic_launcher_background"
            android:id="@+id/iv_photoPreview"
            android:layout_width="120dp" android:layout_height="120dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/control"/>

    <ImageView
            android:id="@+id/iv_facedetected_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@mipmap/ic_face_red"
            app:layout_constraintBottom_toTopOf="@+id/control"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>